textbox and button alignment fixed

--- a/src/app/searchRide/searchRide.css
+++ b/src/app/searchRide/searchRide.css
@@ -1,4 +1,7 @@
 .dropdown-menu {
   width: 93%;  
 }
+.margin-bottom-8px{
+  margin-bottom: 8px !important;
+}
 
